Modified navbar links

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="background-container">
   <div class="overlay">
     <div class="card">
-      <div class="head">Window</div>
+      <div class="head">Expense Tracker</div>
       <div class="content">
         This is your expense tracker app. Login to view your expenses.
         <br />
