--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -46,6 +46,7 @@ body {
     justify-content: space-between;
     align-items: center;
     list-style: none;
+    gap: 20px;
 }
 
 
@@ -54,20 +55,25 @@ body {
 }
 
 .nav-link {
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    background-color: white;
     text-decoration: none;
     font-weight: normal;
     padding: 10px 20px;
     display: block;
-    border-radius: 40px;
+    border: 3px solid #000000;
+    box-shadow: 3px 3px 0 #000000;
     transition: background 0.3s ease-in-out;
+    font-weight: 750;
+    transition: all 0.3s ease;
 }
 
 
 .nav-link:hover {
-    background: #ffffff;
-    color: rgb(0, 0, 0);
-    border-radius: 40px;
+    translate: 1.5px 1.5px;
+    box-shadow: 1.5px 1.5px 0 #000000;
+    background: #1ac2ff;
+    
 }
 
 
@@ -89,7 +95,7 @@ body {
 
 
 .auth-button {
-    padding: 5px 15px;
+    padding: 10px 20px;
     border: 3px solid #000000;
     box-shadow: 3px 3px 0 #000000;
     font-weight: 750;
