--- a/src/app/pages/tracker/tracker.component.css
+++ b/src/app/pages/tracker/tracker.component.css
@@ -1,49 +1,179 @@
-.container{
-    width: 80%;
-    margin:auto;
-    padding: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.tabs{
+.background-container {
+    background-image: url('../../../../public/homeBackground.jpg');
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    z-index: -1;
     display: flex;
-    gap: 5px;
-    margin-bottom: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
-.tab-buttons{
+.card {
+    font-family: Montserrat, sans-serif;
+    width: 600px;
+    height: auto;
+    margin-right: 800px;
+    background: #669cff;
+    border: 3px solid #000000;
+    box-shadow: 12px 12px 0 #000000;
+    overflow: hidden;
+    transition: all 0.3s ease;
     padding: 20px;
-    border: 1px solid #ccc;
-    background-color: #f5f5f5;
+}
+
+.head {
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 900;
+    width: 96%;
+    height: 40px;
+    background: #ffffff;
+    padding: 8px 12px;
+    color: #000000;
+    border-bottom: 3px solid #000000;
+    text-align: center;
+}
+
+
+.content {
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.tabs {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.tab-button {
+    font-family: Montserrat, sans-serif;
+    padding: 8px 8px;
+    border: 3px solid #000000;
+    box-shadow: 3px 3px 0 #000000;
+    background: #ffffff;
     cursor: pointer;
+    font-weight: bold;
+    margin: 0 5px;
 }
 
-.tab-buttons.active{
-    background-color: #444;
-    color: white;
+.tab-button.active {
+    background: #89d3ee;
 }
 
-.expense-form{
-    border: 1px solid #ddd;
-    padding: 15px;
-    margin-bottom: 20px;
+.tab-button:hover {
+    translate: 1.5px 1.5px;
+    box-shadow: 1.5px 1.5px 0 #000000;
 }
 
-.expense-form label{
+.tab-button:active {
+    translate: 3px 3px;
+    box-shadow: 0 0 0 #000000;
+}
+
+.expense-form {
+    padding: 10px;
+    background: #fff;
+    border: 3px solid #000;
+    box-shadow: 5px 5px 0 #000;
+    width: 97%;
+  }
+  
+
+.expense-form h3 {
+    font-family: Montserrat, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.expense-form label {
+    font-family: Montserrat, sans-serif;
     display: block;
-    margin-top: 15px;
+    margin-top: 5px;
+    font-size: 18px;
 }
 
-.expense-form input, .expense-form select{
-    width: 50%;
+.expense-form select {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    width: 100%;
     padding: 5px;
-    margin-top: 10px;
-}
-
-.add-expense-button, .save-button{
-    margin-top: 10px;
-    padding: 5px 10px;
-    display: block;
+    border: 3px solid #000;
+    background: #ffffff;
+    transition: all 0.3s ease;
     cursor: pointer;
 }
 
+.expense-form select option {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    background: #ffffff;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.expense-form select:hover {
+    background: #89d3ee;
+}
+
+.expense-form input {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    width: 97%;
+    padding: 5px;
+    border: 3px solid #000;
+    background: #ffffff;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.button {
+    padding: 5px 10px;
+    margin-top: 10px;
+    border: 3px solid #000000;
+    box-shadow: 3px 3px 0 #000000;
+    font-weight: 750;
+    background: #ffffff;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    text-align: center;
+}
+
+.button:hover {
+    translate: 1.5px 1.5px;
+    box-shadow: 1.5px 1.5px 0 #000000;
+    background: #89d3ee;
+}
+
+.button:active {
+    translate: 3px 3px;
+    box-shadow: 0 0 0 #000000;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+}
