--- a/src/app/pages/tracker/tracker.component.css
+++ b/src/app/pages/tracker/tracker.component.css
@@ -30,7 +30,7 @@
 
 .head {
     font-family: Montserrat, sans-serif;
-    font-size: 16px;
+    font-size: 26px;
     font-weight: 900;
     width: 96%;
     height: 40px;
@@ -40,7 +40,6 @@
     border-bottom: 3px solid #000000;
     text-align: center;
 }
-
 
 .content {
     padding: 8px 12px;
@@ -85,15 +84,16 @@
     border: 3px solid #000;
     box-shadow: 5px 5px 0 #000;
     width: 97%;
-  }
-  
+    height: 340px;
+}
 
 .expense-form h3 {
     font-family: Montserrat, sans-serif;
     font-size: 20px;
     font-weight: bold;
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 .expense-form label {
@@ -113,6 +113,7 @@
     background: #ffffff;
     transition: all 0.3s ease;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .expense-form select option {
@@ -138,6 +139,7 @@
     background: #ffffff;
     transition: all 0.3s ease;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .button {
@@ -176,4 +178,77 @@
     justify-content: center;
     align-items: center;
     text-align: left;
+}
+
+.weekly-overview-button {
+    margin-top: 15px;
+    padding: 10px 12px;
+    width: 100%;
+    font-size: 14px;
+    font-weight: bold;
+    background: #ffffff;
+    border: 3px solid #000;
+    box-shadow: 3px 3px 0 #000;
+    cursor: pointer;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.weekly-overview-button:hover {
+    background: #89d3ee;
+    translate: 1.5px 1.5px;
+    box-shadow: 1.5px 1.5px 0 #000;
+}
+
+.weekly-overview-button:active {
+    translate: 3px 3px;
+    box-shadow: 0 0 0 #000;
+}
+
+.category-popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+/* Category Popup */
+.category-popup {
+    width: 320px;
+    padding: 20px;
+    background: #fec7a5;
+    border: 3px solid #000;
+    box-shadow: 8px 8px 0 #000;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+.category-popup h3 {
+    font-family: Montserrat, sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.category-popup input {
+    width: 95%;
+    padding: 8px;
+    border: 2px solid #000;
+}
+
+.cancel-button {
+    background: #f15e4b;
+    color: black;
+}
+
+.cancel-button:hover {
+    background: #b53827;
 }
