--- a/src/app/pages/tracker/tracker.component.css
+++ b/src/app/pages/tracker/tracker.component.css
@@ -18,7 +18,7 @@
 .card {
     font-family: Montserrat, sans-serif;
     width: 600px;
-    height: auto;
+    height: 550px;
     margin-right: 800px;
     background: #669cff;
     border: 3px solid #000000;
@@ -218,7 +218,6 @@
     z-index: 10;
 }
 
-/* Category Popup */
 .category-popup {
     width: 320px;
     padding: 20px;
@@ -251,4 +250,20 @@
 
 .cancel-button:hover {
     background: #b53827;
+}
+
+.week-summary {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+}
+
+.week-summary li {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px;
+    background: #fff;
+    border: 3px solid #000;
+    box-shadow: 3px 3px 0 #000;
+    margin-bottom: 5px;
 }
