--- a/src/app/components/upload-receipt/upload-receipt.component.html
+++ b/src/app/components/upload-receipt/upload-receipt.component.html
@@ -9,5 +9,7 @@
 
 <h3 *ngIf="extractedExpenses.length">Cheltuieli extrase:</h3>
 <ul>
-  <li *ngFor="let expense of extractedExpenses">{{ expense }} RON</li>
+  <li *ngFor="let expense of extractedExpenses">
+    {{ expense.name }} - {{ expense.price }} RON
+  </li>
 </ul>
