--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 </main>
 <app-footer></app-footer> -->
 
-<app-upload-receipt></app-upload-receipt>
+<!-- <app-upload-receipt></app-upload-receipt> -->
+
+<app-chatbot></app-chatbot>
