--- a/src/app/pages/tracker/tracker.component.css
+++ b/src/app/pages/tracker/tracker.component.css
@@ -18,7 +18,7 @@
 .card {
     font-family: Montserrat, sans-serif;
     width: 600px;
-    height: 550px;
+    height: auto;
     background: #669cff;
     border: 3px solid #000000;
     box-shadow: 12px 12px 0 #000000;
@@ -84,7 +84,7 @@
     border: 3px solid #000;
     box-shadow: 5px 5px 0 #000;
     width: 97%;
-    height: 340px;
+    height: auto;
 }
 
 .expense-form h3 {
@@ -94,6 +94,13 @@
     text-align: left;
     margin-bottom: 20px;
     margin-top: 10px;
+}
+
+p {
+    font-family: Montserrat, sans-serif;
+    font-size: 13px;
+    text-align: left;
+    margin-bottom: 20px;
 }
 
 .expense-form label {
@@ -272,6 +279,56 @@
     margin-bottom: 5px;
 }
 
+.button-bar {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.button-bar .button {
+    width: 48%;
+    text-align: center;
+}
+
+.expense-list {
+    background: white;
+    padding: 10px;
+    border: 2px solid black;
+    margin-top: 15px;
+    box-shadow: 3px 3px 0 black;
+}
+
+.expense-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 8px;
+    border-bottom: 1px solid black;
+}
+
+.expense-info {
+    display: flex;
+    flex-direction: column;
+}
+
+.expense-name {
+    font-weight: bold;
+}
+
+.expense-category {
+    font-size: 12px;
+    color: gray;
+}
+
+.delete-btn {
+    background: rgb(225, 85, 85);
+    color: white;
+    border-radius: 50px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    padding: 4px 8px;
+}
+
 @media screen and (max-width: 768px) {
     .background-container {
         background-image: none;
@@ -330,6 +387,10 @@
         padding: 8px;
     }
 
+    .expense-form.ng-star-inserted {
+        display: block;
+    }
+
     .expense-form h3 {
         font-size: 15px;
         margin: 6px 0;
@@ -366,6 +427,19 @@
         padding: 8px;
     }
 
+    .button-bar {
+        flex-direction: column;
+    }
+
+    .button-bar .button {
+        width: 100%;
+        margin-bottom: 5px;
+    }
+
+    .expense-list {
+        max-height: 250px;
+        overflow-y: auto;
+    }
 }
 
 @media screen and (max-width: 376px) {
