--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -6,11 +6,11 @@
             </div>
             <div class="content">
                 <ng-container *ngIf="!showWeeklyOverview">
+                    
                     <!-- Tabs for weekdays -->
                     <div class="tabs">
-                        <button *ngFor="let day of days" class="tab-button" 
-                                [class.active]="selectedDay === day"
-                                (click)="selectedDay = day">
+                        <button *ngFor="let day of days" class="tab-button" [class.active]="selectedDay === day"
+                            (click)="selectedDay = day">
                             {{ day }}
                         </button>
                     </div>
@@ -19,7 +19,7 @@
                         <button class="button" (click)="toggleExpenseForm()">
                             {{ showExpenseForm ? 'Back' : 'Add Expense' }}
                         </button>
-                        <button class="button save-button">Save</button>
+                        <button class="button save-button" *ngIf="showExpenseForm" (click)="saveExpense()">Save</button>
                     </div>
 
                     <!-- Expense Form -->
@@ -28,28 +28,29 @@
                             <h3>Expenses for {{ selectedDay }}</h3>
 
                             <label>Expense Name:</label>
-                            <input type="text" placeholder="Enter expense name"/>
+                            <input type="text" placeholder="Enter expense name" />
 
-                            <label>Add or select category  <button class="add-category-button" (click)="toggleCategoryPopup()">+</button></label>
+                            <label>Add or select category <button class="add-category-button"
+                                    (click)="toggleCategoryPopup()">+</button></label>
                             <div class="category-container">
                                 <select>
                                     <option>Select Category</option>
                                     <option *ngFor="let category of categories">{{ category }}</option>
                                 </select>
-                                
+
                             </div>
 
                             <div *ngIf="showCategoryPopup" class="category-popup-overlay">
                                 <div class="category-popup">
                                     <h3>Add New Category</h3>
-                                    <input type="text" [(ngModel)]="newCategory" placeholder="Enter new category"/>
+                                    <input type="text" [(ngModel)]="newCategory" placeholder="Enter new category" />
                                     <button class="button" (click)="addCategory()">Add</button>
                                     <button class="button cancel-button" (click)="toggleCategoryPopup()">Cancel</button>
                                 </div>
                             </div>
 
                             <label>Amount:</label>
-                            <input type="number" placeholder="Enter an amount"/>
+                            <input type="number" placeholder="Enter an amount" />
                         </div>
                     </ng-container>
 
@@ -64,7 +65,7 @@
                                 </div>
                                 <div class="expense-amount">
                                     {{ expense.amount }} €
-                                    <button class="delete-btn">×</button>
+                                    <button class="delete-btn" (click)="deleteExpense(expense.name)">×</button>
                                 </div>
                             </div>
                         </div>
