--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -17,7 +17,9 @@
         type="password"
       />
 
-      <button class="button-confirm">Login</button>
+      <button class="button-confirm">
+        {{ isRegistering ? "Sign up" : "Login" }}
+      </button>
       <div *ngIf="!isRegistering">
         <p>
           <a (click)="toggleMode()">
