--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="content">
                 <ng-container *ngIf="!showWeeklyOverview">
-                    
+
                     <!-- Tabs for weekdays -->
                     <div class="tabs">
                         <button *ngFor="let day of days" class="tab-button" [class.active]="selectedDay === day"
@@ -19,7 +19,7 @@
                         <button class="button" (click)="toggleExpenseForm()">
                             {{ showExpenseForm ? 'Back' : 'Add Expense' }}
                         </button>
-                        <button class="button save-button" *ngIf="showExpenseForm" (click)="saveExpense()">Save</button>
+                        <button class="button save-button" *ngIf="showExpenseForm" (click)="saveExpense(selectedDay)">Save</button>
                     </div>
 
                     <!-- Expense Form -->
@@ -28,12 +28,14 @@
                             <h3>Expenses for {{ selectedDay }}</h3>
 
                             <label>Expense Name:</label>
-                            <input type="text" placeholder="Enter expense name" />
+                            <input #expName type="text" placeholder="Enter expense name" />
 
-                            <label>Add or select category <button class="add-category-button"
-                                    (click)="toggleCategoryPopup()">+</button></label>
+                            <label>Add or select category
+                              <!-- <button class="add-category-button"
+                                    (click)="toggleCategoryPopup()">+</button> -->
+                                  </label>
                             <div class="category-container">
-                                <select>
+                                <select #expCategory>
                                     <option>Select Category</option>
                                     <option *ngFor="let category of categories">{{ category }}</option>
                                 </select>
@@ -50,15 +52,15 @@
                             </div>
 
                             <label>Amount:</label>
-                            <input type="number" placeholder="Enter an amount" />
+                            <input #expAmount type="number" placeholder="Enter an amount" />
                         </div>
                     </ng-container>
 
                     <!-- Expense List -->
                     <ng-container *ngIf="!showExpenseForm">
                         <div class="expense-list">
-                            <h4>Existing Expenses ({{ getDayExpenses(selectedDay).length }})</h4>
-                            <div class="expense-item" *ngFor="let expense of getDayExpenses(selectedDay)">
+                            <h4>Existing Expenses</h4>
+                            <div class="expense-item" *ngFor="let expense of dailyExpenses">
                                 <div class="expense-info">
                                     <span class="expense-name">{{ expense.name }}</span>
                                     <span class="expense-category">{{ expense.category }}</span>
@@ -78,7 +80,7 @@
                     <h2>Total Weekly Expenses: {{ getTotalWeeklyExpenses() }} </h2>
                     <ul class="week-summary">
                         <li *ngFor="let day of days">
-                            {{ day }}: {{ getTotalForDay(day) }}
+                            <!-- {{ day }}: {{ getTotalForDay(day) }} -->
                         </li>
                     </ul>
                     <button class="button" (click)="toggleWeeklyOverview()">Back to Tracker</button>
