finish reset password

--- a/src/app/components/auth/auth.component.html
+++ b/src/app/components/auth/auth.component.html
@@ -29,6 +29,10 @@
                 : "No account? Sign up."
             }}
           </a>
+
+          <a (click)="resetPassword()">"Forgot password?"</a>
+
+        
         </p>
       </div>
     </form>
