weekly overview parse solved and amount input validation at new expense

--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -52,7 +52,11 @@
                             </div>
 
                             <label>Amount:</label>
-                            <input #expAmount type="number" placeholder="Enter an amount" />
+                            <input #expAmount type="number"
+                                    placeholder="Enter an amount"
+                                    (input)="validateAmount($event)"
+                                    (keypress)="onKeyPress($event)"
+                                    step="0.01" min="0.01" />
                         </div>
                     </ng-container>
 
