convert atributes to signals

--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="isVisible" class="notification">
+<div *ngIf="isVisible()" class="notification">
   <h1>Eroare!</h1>
-  <p>{{ message }}</p>
+  <p>{{ message() }}</p>
 </div>
