--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
   <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
-<app-notification></app-notification>
+<app-notification message="Eroare ba"></app-notification>
