--- a/src/app/pages/tracker/tracker.component.html
+++ b/src/app/pages/tracker/tracker.component.html
@@ -138,7 +138,7 @@
                     <div class="expense-info">
                       <span class="expense-name">{{ _expense.name }}</span>
                       <span class="expense-category">{{
-                        _expense.category
+                        _expense.category.name
                         }}</span>
                     </div>
                     <div class="expense-amount">
